# PartySearch

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
docs/: commands.md  database.md  ideas.md  igdb.md
igdb/: .dockerignore  .env.sample  Dockerfile  docker-compose.yml
igdb/src/: database.py  main.py  pyproject.toml  utils.py
src/: custom.css  index.html
src/database/: _database.yml  ark-survival-evolved.yml  avorion.yml  battlefield-v.yml  borderlands-3.yml  business-tour.yml  database.yml  dauntless.yml  dying-light-2-stay-human.yml  dying-light-the-following.yml  dying-light.yml  eco.yml  elden-ring.yml  factorio.yml  far-cry-5.yml  far-cry-6.yml  minecraft.yml  monopoly-plus.yml  overcooked-2.yml  overcooked.yml  planetary-annihilation-titans.yml  pummel-party.yml  saints-row-iv.yml  saints-row-the-third.yml  satisfactory.yml  starbound.yml  stardew-valley.yml  starmade.yml  tabletopia-carcassonne.yml  tabletopia-love-letter.yml  tabletopia-secret-hitler.yml  tabletopia-spyfall.yml  tabletopia-the-crew.yml  tabletopia.yml  terraria.yml  the-jackbox-party-pack.yml  untitled-goose-game.yml  warface.yml
tools/: git.sh
